<resources>
    <string name="app_name">Coinome Price Tracker Live</string>
    <string name="btc_inr">BTC/INR</string>
    <string name="buy">Buy:</string>
    <string name="blank">----------</string>
    <string name="sell">Sell:</string>
    <string name="blank_2">----------</string>
    <string name="choose_cryptocurrency_and_update_interval">Select Your Cryptocurrency</string>
    <string name="dash">Dash</string>
    <string name="litecoin">Litecoin</string>
    <string name="bitcoin_cash">Bitcoin Cash</string>
    <string name="bitcoin">Bitcoin</string>
    <string name="loading_coin_to_inr_placeholder">-/INR</string>
    <string name="if_you_find_the_app_useful_click_here_to_leave_a_rating_on_play_store_d">If you find the app useful, Click here to leave a rating on Play Store :D</string>
</resources>
